Fix high severity vulnerabilities in the yarn.lock file

--- a/web/package.json
+++ b/web/package.json
@@ -41,10 +41,7 @@
     "exports-loader": "^5.0.0",
     "globals": "^16.3.0",
     "html-react-parser": "^5.2.0",
-    "image-minimizer-webpack-plugin": "^4.0.2",
-    "imagemin": "^9.0.0",
-    "imagemin-mozjpeg": "^10.0.0",
-    "imagemin-optipng": "^8.0.0",
+    "image-minimizer-webpack-plugin": "^4.1.3",
     "imports-loader": "^5.0.0",
     "jest": "^30.0.2",
     "jest-environment-jsdom": "^29.6.4",
@@ -54,6 +51,7 @@
     "process": "^0.11.10",
     "prop-types": "^15.7.2",
     "resize-observer-polyfill": "^1.5.1",
+    "sharp": "^0.34.3",
     "shim-loader": "^1.0.1",
     "style-loader": "^4.0.0",
     "stylis": "^4.3.4",
